# thryve-financial

./: export_collection_to_parquet.py
pfm/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
pfm/alembic/: env.py
pfm/alembic/versions/: 20260412_0001_add_idempotency_requests.py  20260414_0002_add_users_and_auth_identities.py
pfm/app/: config.py  dependencies.py  main.py  run_api.py
pfm/app/api/: auth.py  health.py  problems.py  router.py  transactions.py
pfm/app/auth/: auth_context.py  bearer.py  claims.py  delegate.py  jwks.py  mock.py  principal.py  provider.py  repository.py  schemas.py  service.py  supabase.py  types.py  verifier.py
pfm/app/clients/: anthropic.py  base.py  plaid.py
pfm/app/core/: analytics.py  analytics_posthog.py  context.py  exceptions.py  idempotency.py  logging.py  pagination.py  problems.py  rate_limit.py  responses.py  security.py  telemetry.py  user_actions.py
pfm/app/db/: redis.py  session.py
pfm/app/engine/: mappings.py  taxonomy.py
pfm/app/middleware/: correlation.py  error_handler.py  operational.py  request_id.py  request_logging.py  user_context.py
pfm/app/models/: __init__.py  auth_identity.py  base.py  idempotency.py  user.py
pfm/app/schemas/: __init__.py  auth.py  health.py  problems.py  transactions.py
pfm/app/services/: transactions.py
pfm/app/workers/: base.py  categorization_tasks.py  celery_app.py  idempotency_tasks.py
pfm/docs/: authentication.md  observability.md
pfm/tests/: conftest.py  factories.py
pfm/tests/test_api/: test_auth.py  test_health.py  test_transactions.py
pfm/tests/test_auth/: test_auth.py
pfm/tests/test_core/: test_analytics.py  test_config.py  test_database.py  test_errors.py  test_idempotency.py  test_logging.py  test_operational_middleware.py  test_rate_limit.py  (+5 more)
(+42 files in other folders)
